--- a/heavycenter/src/main/res/layout/frag_main_order.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order.xml
@@ -21,7 +21,16 @@
             style_common:txt_mid ="订单"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
+<RelativeLayout
+    android:background="@color/color_base"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <View
+        android:id="@+id/now"
+        android:background="@drawable/bg_hv_sharp10_gradient_yell_blue"
+        android:layout_width="200dp"
+        android:layout_height="1dp"/>
+</RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
