--- a/heavycenter/src/main/res/layout/item_main_order_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_begin.xml
@@ -15,8 +15,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="10dp">
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -67,7 +67,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="5dp"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
@@ -97,6 +97,7 @@
                 android:layout_width="0dp"
                 android:layout_height="1dp"/>
             <TextView
+                android:id="@+id/tv_plantime"
                 android:layout_gravity="right|center_vertical"
                 android:gravity="center_vertical|right"
                 android:singleLine="true"
