--- a/heavycenter/src/main/res/layout/frag_main_store_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store_detail.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="frag_main_store_detail"
-            type="String" />
+            type="com.siweisoft.heavycenter.data.netd.mana.store.list.StoreDetail" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -32,7 +32,7 @@
                 android:singleLine="true"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:text="A-15号"
+                android:text="@{frag_main_store_detail.warehouseName}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -41,7 +41,7 @@
                 android:layout_marginLeft="14dp"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:text="混凝土"
+                android:text="@{frag_main_store_detail.productName}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -50,7 +50,7 @@
                 android:layout_marginLeft="10dp"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:text="C30"
+                android:text="@{frag_main_store_detail.specifications}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <View
@@ -62,6 +62,7 @@
 
 
         <com.siweisoft.heavycenter.module.view.store.StoreView
+            android:id="@+id/store"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
@@ -90,7 +91,7 @@
                 <TextView
                     android:textColor="#f6ab12"
                     android:textSize="22sp"
-                    android:text="1500t"
+                    android:text='@{frag_main_store_detail.todayStorage+"t"}'
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -117,7 +118,7 @@
                 <TextView
                     android:textColor="#30e5a3"
                     android:textSize="22sp"
-                    android:text="1500t"
+                    android:text='@{frag_main_store_detail.todayOutStorage+"t"}'
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -145,7 +146,7 @@
                 <TextView
                     android:textColor="#ff6600"
                     android:textSize="22sp"
-                    android:text="1500t"
+                    android:text='@{frag_main_store_detail.todayProfitNum+"t"}'
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
