--- a/heavycenter/src/main/res/layout/item_main_msg_all.xml
+++ b/heavycenter/src/main/res/layout/item_main_msg_all.xml
@@ -9,16 +9,16 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
-        android:background="@color/color_base_graybg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
+
             android:paddingTop="5dp"
             android:paddingRight="5dp"
             android:paddingLeft="5dp"
             android:paddingBottom="5dp"
-            android:background="@color/white"
+            android:background="@drawable/bg_hv_press_sharp2_blue_while"
             android:layout_margin="5dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -73,6 +73,8 @@
                     android:layout_height="wrap_content"/>
             </LinearLayout>
             <TextView
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
                 android:textColor="@color/gray"
                 android:textSize="15sp"
                 android:text="@{item_main_msg_all.messageContent}"
