--- a/heavycenter/src/main/res/layout/frag_myce.xml
+++ b/heavycenter/src/main/res/layout/frag_myce.xml
@@ -13,6 +13,8 @@
         android:background="@color/color_base_graybg"
         android:orientation="vertical">
 <include
+    android:layout_width="match_parent"
+    android:layout_height="210dp"
     android:id="@+id/ll_head"
     layout="@layout/item_myce_head"/>
 
