--- a/heavycenter/src/main/res/layout/item_main_msg_all.xml
+++ b/heavycenter/src/main/res/layout/item_main_msg_all.xml
@@ -29,8 +29,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:textColor="@color/black"
-                    android:textSize="17sp"
+                    android:textColor="@color/hv_color_text_title"
+                    android:textSize="@dimen/hv_dimen_text_title"
                     android:text="@{item_main_msg_all.senderName}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -67,16 +67,16 @@
                     android:layout_height="1dp"/>
                 <TextView
                     android:id="@+id/tv_date"
-                    android:textColor="@color/gray"
-                    android:textSize="13sp"
+                    android:textColor="@color/hv_color_text_date"
+                    android:textSize="@dimen/hv_dimen_text_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
             <TextView
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
-                android:textColor="@color/gray"
-                android:textSize="15sp"
+                android:textColor="@color/hv_color_text"
+                android:textSize="@dimen/hv_dimen_text"
                 android:text="@{item_main_msg_all.messageContent}"
                 android:padding="3dp"
                 android:layout_width="match_parent"
