--- a/heavycenter/src/main/res/layout/frag_myce_unit_addr.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_addr.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content" />
 
             <com.siweisoft.heavycenter.module.view.input.SearchBindUnitMyceItem
+                android:id="@+id/search"
                 style_common:txt_mid ="请输入公司地址"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -65,6 +66,8 @@
 
 
             <TextView
+                android:singleLine="true"
+                android:id="@+id/tv_addr"
                 android:paddingLeft="10dp"
                 android:textSize="14sp"
                 android:textColor="@color/black"
@@ -78,6 +81,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
 
+            <LinearLayout
+                android:id="@+id/ll_local"
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
             <ImageView
                 android:layout_marginRight="5dp"
                 android:src="@drawable/icon_hv_local"
@@ -91,6 +99,7 @@
                 android:text="重新定位"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp" />
+            </LinearLayout>
         </LinearLayout>
 
         <TextView
