--- a/heavycenter/src/main/res/layout/item_myce_unit_new_city.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_new_city.xml
@@ -20,7 +20,6 @@
 
     <LinearLayout
         android:background="@drawable/bg_hv_sharp2_gray_stroke"
-        android:paddingRight="30dp"
         android:paddingLeft="7dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -35,12 +34,13 @@
             android:layout_height="15dp" />
 
         <TextView
+            android:layout_weight="1"
             android:singleLine="true"
             android:textSize="17sp"
             android:textColor="@color/black"
             android:layout_marginLeft="5dp"
             android:text="@{item_myce_unit_new_city.value}"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
