--- a/heavycenter/src/main/res/layout/frag_myce_unit_new.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_new.xml
@@ -50,8 +50,8 @@
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
             android:id="@+id/unitaddr"
             style_common:txt_left = "单位地址"
-            style_common:txt_two ="上海同和国际大厦ABC"
             style_common:txt_mid = "请输入"
+            style_common:txt_two ="请选择"
             style_common:boo_edit = "false"
             style_common:iv_right = "@drawable/icon_arraw"
             android:layout_width="match_parent"
@@ -75,6 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            style_common:txt_maxlenth="11"
             android:id="@+id/unitphone"
             style_common:inputType="0"
             style_common:txt_left = "联系电话"
