--- a/heavycenter/src/main/res/layout/frag_acct_role_tip.xml
+++ b/heavycenter/src/main/res/layout/frag_acct_role_tip.xml
@@ -9,7 +9,6 @@
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/dialog_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#e0000000"
@@ -64,6 +63,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/tv_type"
                 android:textColor="@color/color_hv_yelll"
                 android:textSize="22sp"
                 android:text="非驾驶员"
