--- a/heavycenter/src/main/res/layout/frag_myce.xml
+++ b/heavycenter/src/main/res/layout/frag_myce.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
+<layout xmlns:style_common="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_myce"
@@ -14,10 +15,20 @@
         android:orientation="vertical">
 <include
     android:layout_width="match_parent"
-    android:layout_height="210dp"
+    android:layout_height="190dp"
     android:id="@+id/ll_head"
     layout="@layout/item_myce_head"/>
 
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            app:srlEnablePureScrollMode="true"
+            app:srlDragRate="0.1"
+            android:id="@+id/refreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <com.android.lib.view.item.ItemView
             style_common:color_txt_right="@color/color_base_txt_heavycenter_y"
             android:id="@+id/item_unit"
@@ -188,6 +199,7 @@
             style_common:txt_left="设置"
             style_common:txt_right=""
           />
-
+        </LinearLayout>
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
 </layout>
