--- a/heavycenter/src/main/res/layout/frag_myce_unit_addr.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_addr.xml
@@ -29,8 +29,9 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/tv_city"
                 android:gravity="center"
-                android:text="北京市"
+                android:text="选择城市"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -66,20 +67,16 @@
 
 
             <TextView
+                android:layout_weight="1"
                 android:singleLine="true"
                 android:id="@+id/tv_addr"
                 android:paddingLeft="10dp"
                 android:textSize="14sp"
                 android:textColor="@color/black"
                 android:gravity="center_vertical"
-                android:text="朝阳区北二环50号国贸中心"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="40dp" />
 
-            <View
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
 
             <LinearLayout
                 android:id="@+id/ll_local"
