--- a/heavycenter/src/main/res/layout/frag_myce_unit_new_city.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_new_city.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
             android:id="@+id/title"
-            style_common:txt_mid ="新建单位"
+            style_common:txt_mid ="送货区域"
             style_common:iv_left ="@drawable/icon_hv_back"
             style_common:iv_right ="@drawable/icon_hv_scan"
             android:layout_width="match_parent"
