--- a/heavycenter/src/main/res/layout/item_mana_user.xml
+++ b/heavycenter/src/main/res/layout/item_mana_user.xml
@@ -5,6 +5,7 @@
         <variable
             name="item_mana_user"
             type="com.siweisoft.heavycenter.data.netd.unit.user.UnitUserResBean.ResultsBean" />
+        <import type="com.android.lib.util.StringUtil"/>
     </data>
     <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
@@ -61,22 +62,19 @@
                             android:singleLine="true"
                             android:textColor="@color/black"
                             android:textSize="16.5sp"
-                            android:text="@{item_mana_user.trueName}"
+                            android:text="@{StringUtil.getStr(item_mana_user.trueName)}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <TextView
+                            android:layout_weight="1"
                             android:singleLine="true"
                             android:layout_marginLeft="20dp"
                             android:textColor="@color/color_hv_txt_dark"
                             android:textSize="16.5sp"
-                            android:text="@{item_mana_user.tel}"
+                            android:text="@{StringUtil.getStr(item_mana_user.tel)}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
-                        <View
-                            android:layout_weight="1"
-                            android:layout_width="0dp"
-                            android:layout_height="1dp"/>
                         <TextView
                             android:id="@+id/tv_state"
                             android:background="@drawable/bg_hv_sharp8_yell_stroke"
