--- a/lib/src/main/res/values/base_stand.xml
+++ b/lib/src/main/res/values/base_stand.xml
@@ -11,7 +11,7 @@
     <dimen name="dimens_base_bottom">54dp</dimen>
     <dimen name="dimens_base_item">38dp</dimen>
     <dimen name="dimen_1">1dp</dimen>
-
+    <dimen name="dimen_1sp">1sp</dimen>
 
     <dimen name="dimen_icon_arraw_height">13sp</dimen>
     <dimen name="dimen_icon_arraw_width">13sp</dimen>
